[package]
name = "kurobaex-push-notification-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
lazy_static = "1.4.0"
chrono = "0.4.24"
log = "0.4.17"
env_logger = "0.10.0"
fcm = "0.9.2"
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
refinery = { version = "0.8.7", features = ["tokio-postgres"]}
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
num_cpus = "1.15.0"
sha3 = "0.10.6"